--- a/Fish_Manage/appsettings.json
+++ b/Fish_Manage/appsettings.json
@@ -33,7 +33,7 @@
   },
   "FaceBook": {
     "ClientId": "1722472512021344",
-    "ClinetSecret": "354f1bf3299985af82851885835d3bb2"
+    "ClientSecret": "354f1bf3299985af82851885835d3bb2"
   },
   "Okta": {
     "Authority": "https://dev-51113269.okta.com/oauth2/default",
