--- a/FishManage_UI/package.json
+++ b/FishManage_UI/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.3",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.17.2",
     "vosk-browser": "^0.0.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
