--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ coverage
 
 model.tar.gz
 
+Fish_Manage\Fish_Manage\appsettings.json
+Fish_Manage\Fish_Manage.sln
 cert
 .env
-appsettings.json
-Fish_Manage.csproj
