--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ model.tar.gz
 
 cert
 .env
-appsettings.json
-Fish_Manage.csproj
+Fish_Manage\Fish_Manage\appsettings.json
+Fish_Manage\Fish_Manage.sln
