modify vosk path

--- a/Fish_Manage/appsettings.json
+++ b/Fish_Manage/appsettings.json
@@ -12,7 +12,11 @@
   "APiSettings": {
     "Secret": "Xuho_Pro_player_have_to_solve_IT_problem_12"
   },
-
+  "Vosk": {
+    "En-Us": "E:\\vosk\\vosk-model-en-us-0.22",
+    "Model-spk": "E:\\vosk-spk\\vosk-model-spk-0.4",
+    "FFmpeg ": "E:\ffmpeg\ffmpeg-main\bin\ffmpeg.exe"
+  },
   "Cloudinary": {
     "CloudName": "dsjlij11b",
     "ApiKey": "729393644987496",
@@ -29,7 +33,7 @@
     "ReturnUrl": "https://localhost:5173/callBack.html",
     "NotifyUrl": "https://localhost:5173/checkout/MomoNotify",
     "PartnerCode": "MOMO",
-    "RequestType": "captureMoMoWallet" 
+    "RequestType": "captureMoMoWallet"
   },
   "FaceBook": {
     "AppId": "1722472512021344",
